Enable reflection during arrow-memory-core tests
The tests themselves (specifically testEnableHistoricalLog)
use reflection on java.lang.reflect so surefire needs to
enable this permission.